--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             A passionate Web Developer, UI/UX Designer and Crypto Trader.
           </p><br><br><br>
 
-          <a href = "/files/My_CV.pdf" class = "cv">Download my CV</a>
+          <a href = "/files/My_CV.pdf" class = "cv" download>Download my CV</a>
         </div>
         <div class="photoSection">
           <img src="images/image.jpg" />
