--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#">Home</a>
           <a href="#about">About Me</a>
           <a href="#skill">Skills</a>
-          <a href="#">Project</a>
+          <a href="#project">Project</a>
           <a href="#contact">Contact</a>
         </nav>
       </div>
@@ -34,7 +34,7 @@
             A passionate Web Developer, UI/UX Designer and Crypto Trader.
           </p><br><br><br>
 
-          <a href = "/files/My_CV.pdf" class = "cv" download>Download my CV</a>
+          <a href = "/files/My_CV.pdf"  class = "cv" download>Download my CV</a>
         </div>
         <div class="photoSection">
           <img src="images/image.jpg" />
@@ -232,6 +232,40 @@
           </li>
         </div>
       </section>
+
+
+      <h1 class = "headingandTopics" id = "project">My Projects</h1>
+      <section class = "projects">
+        <div class="project">
+          <div class="image"><a href = "https://github.com/tharakasaranga/Airline-Booking-System.git"><img src = "/images/project1.png"></a></div><br>
+          <div class="intro"><p>
+            This desktop application software, developed using Java and MySQL, provides a seamless platform for managing flight bookings and cancellations. Designed to enhance user experience, the system allows users to book flights, view available flights, and cancel reservations with ease. The robust backend powered by MySQL ensures efficient data management and retrieval, making the entire process smooth and reliable. This project showcases the integration of Java for front-end interface development and MySQL for backend database management, highlighting the effectiveness of combining these technologies for creating comprehensive desktop applications.
+          </p>
+        </div>
+        </div>
+        <div class="project">
+          <div class="image"><a href = "https://github.com/tharakasaranga/ATM-Bank.git"><img src = "/images/project2.png"></a></div><br>
+          <div class="intro"><p>The Bank ATM System is a desktop application developed in Java that offers essential banking functionalities. It allows users to perform various transactions such as depositing and withdrawing funds, checking their account balance, making bill payments, and changing their PIN numbers. This user-friendly software is designed to provide a seamless and secure banking experience, enabling customers to manage their finances efficiently from the convenience of their desktop.</p></div>
+        </div>
+        <div class="project">
+          <div class="image"><a href = "https://github.com/tharakasaranga/School_Management_System.git"><img src = "/images/project3.jpg"></a></div><br>
+          <div class="intro"><p>The School Management System project integrates both a website and a desktop application to streamline administrative tasks in an educational institution. This comprehensive system, developed using Java, HTML, CSS, PHP, and MySQL, features user-friendly interfaces for both web and desktop environments. The project encompasses essential functionalities such as login and sign-up processes, allowing secure access to the system. By leveraging modern web technologies and robust desktop application frameworks, this system aims to enhance efficiency in managing school operations, ensuring a seamless experience for administrators, teachers, and students.</p></div>
+        </div>
+
+
+
+
+      </section>
+
+
+
+
+
+
+
+
+
+
 
 
       <h1 id = "contact" class = "headingandTopics">Contact Me</h1>
