--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </p>
         </div>
         <div class="about-right">
-          <h3>My Certificates</h3>
+          <h3 class = "cc">Certificates</h3>
           <table>
             <tr>
               <td>
@@ -314,9 +314,19 @@
 
 
       </section>
-  
+
+      
+    <footer class="footer">
+      <div><p>...Thank you ...</p></div>
+      <div>
+        <p>Created by K.A.T. Saranga.(Undergradute in Bsc Computer Science - University of Jaffna)</p>
+      </div>
+    </footer>
+
     </div>
 
+  
+  
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="connect.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
